bugfix: input handlers for layer control bugfix: layername z-index chore: license in package.json

--- a/app/public/css/data-style.css
+++ b/app/public/css/data-style.css
@@ -71,3 +71,14 @@ html,body {
 {
     /* pointer-events:  */
 }
+
+#colorSelector,
+#colorSelector *
+{
+    color: black;
+}
+
+#regionPicker
+{
+    z-index: 2;
+}
